Squashing bugs

--- a/css/styles.css
+++ b/css/styles.css
@@ -262,8 +262,10 @@ footer {
     margin: 1px auto 1px 0;
   }
 
-  #input-label-one {
+  .input-label-one {
     padding-right: 78px;
+    font-size: 0.8rem;
+    font-weight: 300;
   }
 
   #name {
